--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Countries infomation</title>
 </head>
 <body>
-  
+  <h3>Copy the link below to access the API</h3>
+  <p>https://godwinchibyk.github.io/countries_api/data.json</p>
 </body>
 </html>
